--- a/app/index.html
+++ b/app/index.html
@@ -115,7 +115,7 @@
 
 						<div class="editable_block-11 widget-7 editorElement layer-type-widget">
 							<div class="body">
-								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 82 м<sup>2</sup> от 2.80 млн руб!</span></h1></div>
+								<div class="title"><h1 class="align-elem">Готовый дом по цене квартиры за 2-3 месяца! Ипотека!<br><span>Дома от 82 м<sup>2</sup> от 2.95 млн руб!</span></h1></div>
 								<div class="text">
 									<div class="layout column layout_8" >
 										<a class="open-form-button button-8 widget-5 widget-type-button editorElement layer-type-widget head-button" href="#take-consultation" ><span>Узнать варианты ипотечных программ</span></a>
@@ -280,7 +280,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/single_lvl/1_4th_roof/1.jpg" data-fancybox="house-1_4th_roof">
-														<div class="house-price"><span>3.50 млн ₽</span></div>
+														<div class="house-price"><span>3.35 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/1_4th_roof/sm.jpg?v=1.7" alt="Дом 90кв. м."></span>
 													</a>
@@ -298,7 +298,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/single_lvl/2_4th_roof/1.jpg" data-fancybox="house-2_4th_roof">
-														<div class="house-price"><span>3.99 млн ₽</span></div>
+														<div class="house-price"><span>3.80 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/2_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
 													</a>
@@ -315,7 +315,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/single_lvl/3_4th_roof/1.jpg?v=1.7" data-fancybox="house-3_4th_roof">
-														<div class="house-price"><span>4.35 млн ₽</span></div>
+														<div class="house-price"><span>4.15 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/3_4th_roof/sm.jpg?v=1.7" alt="Дом 120кв. м"></span>
 													</a>
@@ -333,7 +333,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/single_lvl/4_4th_roof/1.jpg" data-fancybox="house-4_4th_roof">
-														<div class="house-price"><span>5.10 млн ₽</span></div>
+														<div class="house-price"><span>4.90 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/single_lvl/4_4th_roof/sm.jpg" alt="Дом 90кв. м."></span>
 													</a>
@@ -365,7 +365,7 @@
 
 
 
-						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+						<!-- <div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
 							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
 
 								<div class="description">
@@ -389,7 +389,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_1/1.jpg" data-fancybox="house-people_1">
-														<div class="house-price"><span>2.80 млн ₽</span></div>
+														<div class="house-price"><span>2.95 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg?v=1.7" alt="Дом 90кв. м."></span>
 													</a>
@@ -408,7 +408,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_2/1.jpg" data-fancybox="house-people_2">
-														<div class="house-price"><span>3.45 млн ₽</span></div>
+														<div class="house-price"><span>3.64 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.7" alt="Дом 120кв. м"></span>
 													</a>
@@ -433,7 +433,7 @@
 								</div>
 								
 							</div>
-						</div>
+						</div> -->
 
 
 
@@ -461,7 +461,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_1/1.jpg" data-fancybox="house-classic_1">
-														<div class="house-price"><span>3.25 млн ₽</span></div>
+														<div class="house-price"><span>3.30 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg?v=1.7" alt="Дом 90кв. м."></span>
 													</a>
@@ -480,7 +480,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_2/1.jpg" data-fancybox="house-classic_2">
-														<div class="house-price"><span>3.95 млн ₽</span></div>
+														<div class="house-price"><span>4.10 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg?v=1.7" alt="Дом 120кв. м."></span>
 													</a>
@@ -499,7 +499,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_3/1.jpg?v=1.7" data-fancybox="house-classic_3">
-														<div class="house-price"><span>4.70 млн ₽</span></div>
+														<div class="house-price"><span>4.90 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg?v=1.7" alt="Дом 150кв. м"></span>
 													</a>
@@ -518,7 +518,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_4/1.jpg" data-fancybox="house-classic_4">
-														<div class="house-price"><span>5.99 млн ₽</span></div>
+														<div class="house-price"><span>6.15 млн ₽</span></div>
 														<div class="item-label"></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_4/sm.jpg?v=1.7" alt="Дом 150кв. м"></span>
 													</a>
@@ -562,7 +562,7 @@
 									+ бетон; межэтажное ребристое бетонное перекрытие, ребристые ж/б плиты перекрытия с
 									утеплением на кровле;</span></p></li>
 									<li><p><span>Трехслойные стеновые панели с утеплением: внешний фасад - бетон 5 см + утеплитель 15 см + бетон 6 см;</span></p></li>
-									<li><p><span>Кровля - односкатная под уклоном, устройство рулонной кровли (Народный дом), стропильная система, четырехскатная холодная кровля с водосточной системой и подшивкой софитами (дома "Классика", одноэтажные дома);</span></p></li>
+									<li><p><span>Кровля -  мансардная утепленная с водосточной системой и подшивкой софитами (Мансардные дома), стропильная система, четырехскатная холодная кровля с водосточной системой и подшивкой софитами (дома "Классика", одноэтажные дома);</span></p></li>
 									<li><p><span>Лестница межэтажная деревянная с состариванием и шлифованием;</span></p></li>
 									<li><p><span>Окна ПВХ, входная утепленная дверь;</span></p></li>
 									<li><p><span>Фасад - окраска фасадной краской + декоративные элементы фахверк;</span></p></li>
