--- a/app/index.html
+++ b/app/index.html
@@ -11,20 +11,20 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.4">
+	<link rel="stylesheet" href="title.styles.css?v=3.5">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.4">
+	<link rel="stylesheet" href="css/main.min.css?v=3.5">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.4"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.5"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=3.4">
+	<link rel="stylesheet" href="styles.css?v=3.5">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -855,7 +855,7 @@
 								<div class="cell-text">
 									<div class="title"><div class="align-elem">Нас легко найти</div></div>
 									<div class="text_body">
-										<div class="align-elem">Россия, г. Хабаровск, ул. Калинина, 51</div>
+										<div class="align-elem">Россия, г. Хабаровск, ул. Ленина 18в</div>
 									</div>
 								</div>
 							</div>
