--- a/app/kontakty.html
+++ b/app/kontakty.html
@@ -13,20 +13,20 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=3.3">
+	<link rel="stylesheet" href="title.styles.css?v=3.4">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=3.3">
+	<link rel="stylesheet" href="css/main.min.css?v=3.4">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=3.3"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=3.4"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script type="text/javascript" src="title.js"></script>
-	<link rel="stylesheet" href="styles.css?v=3.3">
+	<link rel="stylesheet" href="styles.css?v=3.4">
 	
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -238,7 +238,7 @@
 
 								<div class="localcontacts__adress-inner">
 									<b>Адрес отдела продаж</b>
-									<p>Россия, г. Хабаровск, ул. Калинина, 51</p>
+									<p>Россия, г. Хабаровск, ул. Ленина 18в</p>
 								</div>
 
 								<div class="localcontacts__adress-inner">
