--- a/app/index.html
+++ b/app/index.html
@@ -369,18 +369,12 @@
 
 
 
-						<!-- <div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
 							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
 
 								<div class="description">
 									<div class="align-elem">
-										<h2 class="sub-descr">Проекты двухэтажных домов</h2>
-									</div>
-								</div>
-
-								<div class="description">
-									<div class="align-elem">
-										<h2 class="sub-descr">Народный дом с односкатной кровлей</h2>
+										<h2 class="sub-descr">Мансардный дом</h2>
 									</div>
 								</div>
 
@@ -392,38 +386,38 @@
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_1/1.jpg" data-fancybox="house-people_1">
+													<a class="image fancybox" href="img/houses/attic_1/1.jpg" data-fancybox="house-attic_1">
 														<div class="house-price"><span>2.95 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg?v=1.8" alt="Дом 90кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/attic_1/sm/1.jpg?v=1.8" alt="Дом 83кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/2.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/3.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/4.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/5.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1" data-thumb="img/houses/people_1/scheme.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_1/2.jpg" data-fancybox="house-attic_1" data-thumb="img/houses/attic_1/2.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_1/3.jpg" data-fancybox="house-attic_1" data-thumb="img/houses/attic_1/3.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_1/4.jpg" data-fancybox="house-attic_1" data-thumb="img/houses/attic_1/4.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_1/5.jpg" data-fancybox="house-attic_1" data-thumb="img/houses/attic_1/5.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_1/scheme.jpg" data-fancybox="house-attic_1" data-thumb="img/houses/attic_1/scheme.jpg?v=1.8"></a>
 													</div>
-													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
+													<span class="title"><span class="align-elem">Общая площадь 83,30кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
 												</div>
 											</div>
 
 											<div class="item-outer">
 												<div class="item">
-													<a class="image fancybox" href="img/houses/people_2/1.jpg" data-fancybox="house-people_2">
+													<a class="image fancybox" href="img/houses/attic_2/1.jpg" data-fancybox="house-attic_2">
 														<div class="house-price"><span>3.64 млн ₽</span></div>
 														<div class="item-label"></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.8" alt="Дом 120кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/attic_2/sm/1.jpg?v=1.8" alt="Дом 117кв. м"></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/people_2/2.jpg?v=1.8" data-fancybox="house-people_2" data-thumb="img/houses/people_2/2.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_2/3.jpg?v=1.8" data-fancybox="house-people_2" data-thumb="img/houses/people_2/3.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_2/4.jpg?v=1.8" data-fancybox="house-people_2" data-thumb="img/houses/people_2/4.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_2/5.jpg?v=1.8" data-fancybox="house-people_2" data-thumb="img/houses/people_2/5.jpg?v=1.8"></a>
-														<a class="image fancybox" href="img/houses/people_2/scheme.jpg?v=1.8" data-fancybox="house-people_2" data-thumb="img/houses/people_2/scheme.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_2/2.jpg?v=1.8" data-fancybox="house-attic_2" data-thumb="img/houses/attic_2/2.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_2/3.jpg?v=1.8" data-fancybox="house-attic_2" data-thumb="img/houses/attic_2/3.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_2/4.jpg?v=1.8" data-fancybox="house-attic_2" data-thumb="img/houses/attic_2/4.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_2/5.jpg?v=1.8" data-fancybox="house-attic_2" data-thumb="img/houses/attic_2/5.jpg?v=1.8"></a>
+														<a class="image fancybox" href="img/houses/attic_2/scheme.jpg?v=1.8" data-fancybox="house-attic_2" data-thumb="img/houses/attic_2/scheme.jpg?v=1.8"></a>
 													</div>
-													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
+													<span class="title"><span class="align-elem">Общая площадь 117кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div>
 												</div>
 											</div>
@@ -433,11 +427,11 @@
 								</div>
 
 								<div class="button-container">
-									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать "Народный" дом с односкатной кровлей</span></a>
+									<a class="open-form-button center-button" href="#take-people-house"><span>Заказать Мансардный дом</span></a>
 								</div>
 								
 							</div>
-						</div> -->
+						</div>
 
 
 
@@ -972,10 +966,10 @@
 			<div class="success">
 				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
 			</div>
-			<p>Оставьте заявку на <br>"Народный" дом с односкатной кровлей <br>и наш менеджер свяжется с вами</p>
+			<p>Оставьте заявку на <br>Мансардный дом<br> и наш менеджер свяжется с вами</p>
 			<!-- Hidden Required Fields -->
 			<input type="hidden" name="project_name" value="КПД-100">
-			<input type="hidden" name="form_subject" value="КПД-100 | заявка на 'Народный' дом с односкатной кровлей">
+			<input type="hidden" name="form_subject" value="КПД-100 | заявка на Мансардный дом">
 			<!-- END Hidden Required Fields -->
 			<div class="inputs">
 				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
@@ -1041,16 +1035,24 @@
 
 			<div>
 				<h3>Сенсация для молодых семей! (возраст до 36 лет)</h3>
-				<h3>Теперь вы можете построить свой дом в ипотеку 2% БЕЗ ЗАЛОГА!!!</h3>
+				<h3>Теперь вы можете построить свой дом в ипотеку от 1,3% БЕЗ ЗАЛОГА!!!</h3>
 				<p>За период действия ДВ ипотеки огромное количество молодых семей обращались к нам за строительством дома, но банки требовали залог в виде недвижимости (квартиры), причем залог должен был быть выше суммы кредита.</p>
 				<p>Например, у нас дом с сетями и участком стоит всего 3,8 млн. руб., а залог требовался на сумму не менее 4,75 млн. руб! В 90% случаев такого залога у молодых семей не было, и они могли только мечтать о доме.</p>
 				<p>Но сегодня все изменилось! Общими усилиями мы добились того, что теперь для строительства дома <strong>залог не требуется!</strong></p>
-				<p>Да что там строительство – вы, можно сказать, покупаете свой дом! Ведь с момента заключения договора до новоселья пройдет всего <strong>75 дней!</strong></p>
+				<p><strong>условия получения ипотеки:</strong></p>
+				<ul>
+					<li>первоначальный взнос 15%;</li>
+					<li>макс. сумма кредита до 6 млн. руб.;</li>
+					<li>срок кредита до 20 лет;</li>
+					<li>необходимо залоговое имущество или Поручитель – всего на несколько месяцев! (до оформления права собственности на дом);</li>
+					<li>сумма кредита не может превышать 80% от залоговой стоимости;</li>
+					<li>земельный участок должен находиться в черте города, быть категории ИЖС / ЛПХ, быть в собственности либо аренде на срок не менее срока действия кредита.</li>
+				</ul>
+				<p>кредит выдается гражданам РФ до 35 лет вкл., которые либо не состоят в браке и имеют ребенка, не достигшего совершеннолетия, либо семейным парам не старше 35 лет вкл.</p>
 			</div>
 
 			<div>
 				<h3>Стандартная ипотека от 8,8% на строительство дома в городе или сельской местности</h3>
-				<h3>Уникальное предложение! первый год у Вас всего 6,3% - мы платим проценты за Вас! <br>(предложение действует до 30.10.2020г)</h3>
 				<p><strong>условия получения ипотеки:</strong></p>
 				<ul>
 					<li>первоначальный взнос 25%;</li>
@@ -1076,28 +1078,35 @@
 			</div>
 
 			<div>
-				<h3>Дальневосточная ипотека 2% ПОД СТРОИТЕЛЬСТВО ДОМА в городе или сельской местности</h3>
+				<h3>Сельская ипотека 2,7% на СТРОИТЕЛЬСТВО ДОМА в сельской местности от Россельхозбанка</h3>
+				<p>Пожалуй, это лучшая ипотечная программа для большинства жителей нашего региона!</p>
+				<p><b>По данной ипотечной программе нет ограничения по возрасту, минимальный первоначальный платеж, не требуется залоговое имущество либо Поручитель на период строительства.</b></p>
+				<p>Для Подрядной организации условия же по данной программе более жесткие. Подрядчик по данной программе строит дом на свои средства. От Заказчика Подрядчик получает только часть средств – 50%, а остаток 50% – только после сдачи дома Заказчику, при чем дом сдается Заказчику обязательно с отделкой, сантехникой – готовый для проживания.</p>
+				<p>Строить дома по такой схеме может позволить себе только компания, у которой имеется свое производство.</p>
+				<p><b>Компания КПД-100 первая в России заключила Договор с клиентом по ипотечной программе 2,7%</b> на строительство индивидуального жилого дома, выполнив все жесткие условия и требования, предъявляемые к Подрядной организации Россельхобанком! <b>На сегодняшний день мы строим 5 домов по данной программе.</b></p>
+				<p>Осенью 2020г мы получили от Министерства строительства хабаровского края ходатайство о том, что наша компания является надежным Застройщиком - это позволяет рассматривать заявки наших клиентов на местном уровне, не в Москве, тем самым срок рассмотрения заявки занимает не более 2-х месяцев!</p>
 				<p><strong>условия получения ипотеки:</strong></p>
 				<ul>
-					<li>первоначальный взнос 20%;</li>
-					<li>макс. сумма кредита до 6 млн. руб.;</li>
+					<li>первоначальный взнос 10%;</li>
+					<li>макс. сумма кредита до 5 млн. руб.;</li>
 					<li>срок кредита до 20 лет;</li>
-					<li>необходимо залоговое имущество или Поручитель – всего на 3 месяца! (до оформления права собственности на дом);</li>
-					<li>сумма кредита не может превышать 80% от залоговой стоимости;</li>
-					<li>земельный участок должен находиться в черте города, быть категории ИЖС / ЛПХ, быть в собственности либо аренде на срок не менее срока действия кредита.</li>
+					<li>земельный участок должен находиться в сельской местности, быть категории ИЖС / ЛПХ, быть в собственности либо аренде на срок не менее срока действия кредита;</li>
+					<li>кредит выдается гражданам РФ до 70 лет.</li>
 				</ul>
-				<p>кредит выдается гражданам РФ до 35 лет вкл., которые либо не состоят в браке и имеют ребенка, не достигшего совершеннолетия, либо семейным парам не старше 35 лет вкл.</p>
-				<p><strong>У вас нет земельного участка?</strong></p>
+				<p><b>Поскольку строительство дома по данной программе осуществляется за счет средств Подрядной организации – количество заявок в месяц – ограничено.</b></p>
+				<p><b>У вас нет земельного участка?</b></p>
 				<p>Мы поможем купить его и включить в стоимость ипотечного кредита!</p>
-			</div>
-
-			<div>
-				<h3>Сельская ипотека 2,7% на СТРОИТЕЛЬСТВО ДОМА в сельской местности</h3>
-				<h3>Программа не работает!</h3>
-				<p>Не смотря на то, что компания КПД-100 первая в России заключила Договор с клиентом по ипотечной программе 2,7% на строительство индивидуального жилого дома, выполнив при этом все жесткие условия и требования, предъявляемые к Подрядной организации Россельхобанком, мы заявляем о том, что данная льготная программа сейчас работает только на покупку готового жилья, а на строительство индивидуальных жилых домов – скорее нет, чем да. </p>
-				<p>С марта 2020 года по июнь было принято 14 заявок (в июне прием заявок был остановлен), из которых за 7 месяцев, по сентябрь, одобрено только 4!</p>
-				<p>Срок рассмотрения заявки каждого клиента на строительство индивидуального жилого дома по этой программе не регламентирован и занимает более 6 месяцев, что явно не способствует развитию малоэтажного строительства.</p>
-				<p>Чтобы льготная программа была эффективной – необходимо, чтобы заявки клиентов рассматривались на местном уровне, а не в г. Москве. В данный момент руководство Россельхозбанка совместно с руководством завода КПД 100 занимаются решением «слабых» мест в данной программе.</p>
+				<img src="img/mortgage.jpg" alt="ипотека" class="img-responsive">
+				<p>Наш партнёр Почта Банк поможет оформить кредит на покупку загородного дома на сумму до 3 млн ₽.</p>
+				<p>Получение кредита займет не более 30 минут.</p>
+				<p>Банк подберёт для вас удобную кредитную программу на срок до 5 лет по ставке от 4,9% годовых и рассчитает комфортные ежемесячные платежи.</p>
+				<p>Сумма первоначального взноса остается на ваше усмотрение и составит от 10% до 90% от стоимости объекта.</p>
+				<p>Для оформления достаточно иметь:</p>
+				<ul>
+					<li>паспорт;</li>
+					<li>СНИЛС;</li>
+					<li>мобильный телефон.</li>
+				</ul>
 			</div>
 
 		</div>
